Spacing fix

--- a/tierlist/app/components/PublishedTile/PublishedTile.module.css
+++ b/tierlist/app/components/PublishedTile/PublishedTile.module.css
@@ -1,6 +1,7 @@
 .published_tile {
     height: 280px;
-    min-width: 200px;
+    width: 200px;
+    max-width: 200px;
     border: none;
     cursor: pointer;
     align-items: flex-end;
@@ -19,10 +20,12 @@
     margin: 4px;
     transition: all 0.2s;
     box-shadow: 2px 4px 12px #00000014;
+    overflow: hidden;
 }
 
 .published_tile:hover {
-    min-width: 208px;
+    width: 208px;
+    max-width: 208px;
     height: 288px;
     margin: 0px;
     padding: 24px;
@@ -91,6 +94,7 @@
 .published_tile_description {
     font-size: 13px;
     font-weight: 400;
+    max-width: 100%;
 }
 
 .create {
